[tool.poetry]
name = "my_krml_13964907"
version = "0.1.6"
description = "uni_repo"
authors = ["zoe_barrett"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.3.3"
scikit-learn = "0.24.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
